k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  labels:
    app: product-catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-catalog
  template:
    metadata:
      labels:
        app: product-catalog
    spec:
      containers:
      - name: product-catalog
        # Using a stable image to ensure the blue ring appears for Question 7
        image: quay.io/rofrano/nyu-devops-project:latest
        ports:
        - containerPort: 8080
