k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  labels:
    app: product-catalog
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: product-catalog
